--- a/assets/sass/protocol/includes/utils/_index.scss
+++ b/assets/sass/protocol/includes/utils/_index.scss
@@ -1,7 +1,8 @@
-@use 'at2x';
-@use 'gradients';
-@use 'grid';
-@use 'images';
-@use 'bidi';
-@use 'zap';
-@use 'typography';
+@forward 'at2x';
+@forward 'gradients';
+@forward 'grid';
+@forward 'images';
+@forward 'bidi';
+@forward 'zap';
+@forward 'typography';
+@forward 'details';
