--- a/assets/sass/protocol/base/elements/_common.scss
+++ b/assets/sass/protocol/base/elements/_common.scss
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@use '../../includes/lib';
+@use '../../includes/lib' as *;
 // Basic styling for some common elements
 
 p,
@@ -18,11 +18,11 @@ code {
 }
 
 hr {
-    border: 0 solid lib.$color-marketing-gray-20;
+    border: 0 solid $color-marketing-gray-20;
     border-top-width: 4px;
-    margin: lib.$layout-md 0;
+    margin: $layout-md 0;
 
-    @media #{lib.$mq-lg} {
-        margin: lib.$layout-lg 0;
+    @media #{$mq-lg} {
+        margin: $layout-lg 0;
     }
 }
