--- a/assets/sass/protocol/base/elements/_document.scss
+++ b/assets/sass/protocol/base/elements/_document.scss
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@use '../../includes/lib';
+@use '../../includes/lib' as *;
 
 
 html {
@@ -12,15 +12,15 @@ html {
 
 body {
     @include text-body-md;
-    background: lib.get-theme('background-color');
-    color: lib.get-theme('body-text-color');
-    font-family: lib.get-theme('body-font-family');
-    line-height: type-scale('body-line-height');
+    background: get-theme('background-color');
+    color: get-theme('body-text-color');
+    font-family: get-theme('body-font-family');
+    line-height: theme-type-scale('body-line-height');
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
 }
 
 // A few places use a class to hide elements. We should try to avoid that.
 .hidden {
-    @include lib.hidden;
+    @include hidden;
 }
