--- a/assets/sass/protocol/base/elements/_titles.scss
+++ b/assets/sass/protocol/base/elements/_titles.scss
@@ -2,44 +2,44 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@use '../../includes/lib';
+@use '../../includes/lib' as *;
 
 
 // Base styles for heading elements
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: lib.get-theme('title-font-family');
-    color: lib.get-theme('title-text-color');
+    font-family: get-theme('title-font-family');
+    color: get-theme('title-text-color');
     font-weight: bold;
     margin: 0 0 .5em;
 
     .mzp-t-dark & {
-        color: lib.get-theme('title-text-color-inverse');
+        color: get-theme('title-text-color-inverse');
     }
 }
 
 // Type scale mixins can be found in includes/mixins/_typography.scss
 // Sizes are defined in includes/_themes.scss
 h1 {
-    @include lib.text-title-lg;
+    @include text-title-lg;
 }
 
 h2 {
-    @include lib.text-title-md;
+    @include text-title-md;
 }
 
 h3 {
-    @include lib.text-title-sm;
+    @include text-title-sm;
 }
 
 h4 {
-    @include lib.text-title-xs;
+    @include text-title-xs;
 }
 
 h5 {
-    @include lib.text-title-2xs;
+    @include text-title-2xs;
 }
 
 h6 {
-    @include lib.text-title-3xs;
+    @include text-title-3xs;
 }
