--- a/assets/sass/protocol/components/_button.scss
+++ b/assets/sass/protocol/components/_button.scss
@@ -2,13 +2,13 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../includes/lib';
-@import '../includes/forms';
+@use '../includes/lib' as *;
+@use '../includes/forms';
 
 @mixin default-states {
     &:focus {
-        border-color: $button-border-color-focus;
-        box-shadow: $field-focus-ring;
+        border-color: forms.$button-border-color-focus;
+        box-shadow: forms.$field-focus-ring;
     }
 
     &:hover {
@@ -27,8 +27,8 @@
 
 @mixin default-states-dark {
     &:focus {
-        border-color: $button-border-color-focus;
-        box-shadow: $field-focus-ring-dark;
+        border-color: forms.$button-border-color-focus;
+        box-shadow: forms.$field-focus-ring-dark;
     }
 
     &:hover {
@@ -47,8 +47,8 @@
 
 @mixin product-states {
     &:focus {
-        border-color: $button-border-color-focus;
-        box-shadow: $field-focus-ring;
+        border-color: forms.$button-border-color-focus;
+        box-shadow: forms.$field-focus-ring;
     }
 
     &:hover {
@@ -83,13 +83,13 @@ a.mzp-c-button {
     display: inline-block;
     font-family: get-theme('button-font-family');
     font-weight: bold;
-    line-height: type-scale('body-line-height');
+    line-height: theme-type-scale('body-line-height');
     padding: 6px $spacing-lg;
     text-decoration: none !important;  /* stylelint-disable-line declaration-no-important */
 
     &:focus {
-        border-color: $button-border-color-focus;
-        box-shadow: $field-focus-ring;
+        border-color: forms.$button-border-color-focus;
+        box-shadow: forms.$field-focus-ring;
         color: $color-white;
         outline: none;
     }
@@ -221,7 +221,7 @@ a.mzp-c-button {
         color: $color-marketing-gray-70;
 
         &:focus {
-            border-color: $button-border-color-focus;
+            border-color: forms.$button-border-color-focus;
         }
 
         &:hover {
@@ -243,7 +243,7 @@ a.mzp-c-button {
             color: $color-white;
 
             &:focus {
-                border-color: $button-border-color-focus;
+                border-color: forms.$button-border-color-focus;
             }
 
             &:hover {
@@ -266,14 +266,14 @@ a.mzp-c-button {
 
 .mzp-c-button-download-container {
     text-align: center;
-    margin-bottom: $field-v-spacing;
+    margin-bottom: forms.$field-v-spacing;
     display: inline-block;
 }
 
 .mzp-c-button-download-privacy-link {
     @include text-body-xs;
     display: block;
-    margin-top: $info-v-spacing;
+    margin-top: forms.$info-v-spacing;
 
     a:link,
     a:visited {
