--- a/assets/sass/protocol/includes/_lib.scss
+++ b/assets/sass/protocol/includes/_lib.scss
@@ -5,11 +5,10 @@
 // Forward user-configurable variables
 @forward 'config';
 // Namespace theme functions
-@forward 'themes' as theme-*;
+@forward 'themes';
 
 // Import all the things!
 @forward '../../../../node_modules/@mozilla-protocol/tokens/dist/index.scss';
 @forward 'functions';
-@forward 'themes';
 @forward 'mixins';
-@forward 'utils';
+@forward 'utils' hide str-replace;
