--- a/assets/sass/protocol/includes/utils/_grid.scss
+++ b/assets/sass/protocol/includes/utils/_grid.scss
@@ -15,7 +15,7 @@ $gutter-width:  dist.$layout-sm;
 // Usage:
 //  .foo { @include colspan(4); }
 @mixin colspan($columns) {
-    @include border-box;
+    @include mixins.border-box;
     width: $column-width * $columns;
     padding-left: $gutter-width * 0.5;
     padding-right: $gutter-width * 0.5;
@@ -27,26 +27,26 @@ $gutter-width:  dist.$layout-sm;
 }
 
 @mixin grid-quarter {
-    @include border-box;
+    @include mixins.border-box;
     width: 25%;
 }
 
 @mixin grid-third {
-    @include border-box;
+    @include mixins.border-box;
     width: 33.333%;
 }
 
 @mixin grid-half {
-    @include border-box;
+    @include mixins.border-box;
     width: 50%;
 }
 
 @mixin grid-two-thirds {
-    @include border-box;
+    @include mixins.border-box;
     width: 66.666%;
 }
 
 @mixin grid-three-quarters {
-    @include border-box;
+    @include mixins.border-box;
     width: 75%;
 }
